new: add basic setup instructions

--- a/README
+++ b/README
@@ -3,3 +3,17 @@ Smithery
 --------
 
 Collect and reformat data and metadata
+
+Dependencies
+------------
+
+ * Python
+
+Setup development environment
+-----------------------------
+
+    git clone git://github.com/alexamici/smithery.git smithery
+    cd smithery
+    python bootstrap.py -d
+    ./bin/buildout -nv
+
